--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ classifiers = [
 ]
 dependencies = [
     "loguru~=0.7.3",
-    "opencv-python~=4.11.0",
+    "opencv-python-headless~=4.11.0",
     "inspireface~=1.1.13",
 ]
 
